--- a/imageloader/build.gradle
+++ b/imageloader/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 31
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 21
+        minSdkVersion 21
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
     }
@@ -14,6 +14,6 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:21.0.3'
-    implementation 'com.android.support:support-v4:21.0.3'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
